# prism-git

./: .gitignore  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: README.md  architecture.md  cli-guide.md  repository-view-requirements.md  requirements.md  ui-design.md  ui-prompts.md
prism/: RUNNING.md  package.json
prism/src/: App.css
prism/src-tauri/: tauri.conf.json
prism/src-tauri/src/: config.rs  git_ops.rs
prism/src/styles/: global.css  variables.css
src/: App.css  App.tsx  GitClient.css  GitClient.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  cli_main.rs  config.rs  git_ops.rs  main.rs  models.rs
src/api/: index.ts  window.ts
src/components/common/Badge/: index.css  index.test.tsx  index.tsx
src/components/common/Button/: index.css  index.stories.tsx  index.test.tsx  index.tsx
src/components/common/Input/: index.css  index.stories.tsx  index.test.tsx  index.tsx
src/components/common/ResizablePanel/: index.css  index.tsx
src/components/common/Tabs/: index.css
src/components/git/BranchBadge/: index.stories.tsx  index.tsx
src/components/git/FileStatusBadge/: index.css  index.stories.tsx  (+1 more)
src/hooks/: useLayoutState.ts  useTheme.ts
src/styles/: global.css  variables.css
src/test/: setup.ts
src/types/: git.ts
src/views/Repository/: index.css  index.tsx
src/views/RepositoryList/: index.css  index.tsx
src/views/RepositoryView/: index.css  index.tsx
(+29 files in other folders)
