[package]
name = "prism"
version = "0.1.0"
edition = "2021"
default-run = "prism-gui"

# 明确不是父级 workspace 的成员
[workspace]

[[bin]]
name = "prism-gui"
path = "src/main.rs"

[[bin]]
name = "prism"
path = "src/cli_main.rs"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
interprocess = { version = "2", features = ["tokio"] }
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
